--- a/_notebooks/2020_03_27_intro.ipynb
+++ b/_notebooks/2020_03_27_intro.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# \"The Role of Wide Baseline Stereo in the Deep Learning World\"\n",
-    "> \"History of wide baseline stereo.\"\n",
+    "> \"Short history of wide baseline stereo in computer vision\"\n",
     "- toc: false\n",
     "- branch: master\n",
-    "- badges: false\n",
-    "- comments: false\n",
-    "- image: '00_intro_files/att_00001.png'\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- image: images/att_00001.png\n",
     "- hide: false\n",
     "- search_exclude: true"
    ]
@@ -30,8 +30,7 @@
     "<!--- ![Wide baseline stereo model. \"Baseline\" is the distance between cameras. Image by Arne Nordmann (WikiMedia)](00_intro_files/Epipolar_geometry.svg) \n",
     "-->\n",
     "\n",
-    "One of the first succesful solutions for the WBS problem was proposed by Pritchett and Zisserman \\cite{Pritchett1998, Pritchett1998b} in 1998. The general pipeline remains mostly the same until now \\cite{WBSTorr99, CsurkaReview2018}. The currently adopted version of the wide baseline stereo algorithm is shown below in [Figure 1](#wbs-pipeline). \n",
-    "\n",
+    "One of the first succesful solutions for the WBS problem was proposed by Pritchett and Zisserman \\cite{Pritchett1998, Pritchett1998b} in 1998. The general pipeline remains mostly the same until now \\cite{WBSTorr99, CsurkaReview2018}. The currently adopted version of the wide baseline stereo algorithm is shown below. \n",
     "\n",
     "<!--- \n",
     "![image.png](00_intro_files/att_00002.png)\n",
@@ -39,8 +38,7 @@
     "\n",
     "\n",
     "![Commonly used wide baseline stereo pipeline](00_intro_files/att_00000.png \"Commonly used wide baseline stereo pipeline\")\n",
-    "\n",
-    "[wbs-pipeline]: 00_intro_files/att_00000.png \"Commonly used wide baseline stereo pipeline\"\n",
+    "*Commonly used wide baseline stereo pipeline*\n",
     "\n",
     "\n",
     "The algorithm can be summarized as the following:\n",
@@ -48,8 +46,13 @@
     "1. Compute interest points/regions in all images independently\n",
     "2. For each interest point/region compute a descriptor of their neigborhood (local patch).\n",
     "3. Establish tentative corresponces between interest points based on their descriptors.\n",
-    "4. Robustly estimate geometric relation between two images based on tentative correspondences with RANSAC.\n",
-    "\n",
+    "4. Robustly estimate geometric relation between two images based on tentative correspondences with RANSAC.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Quick expansion \n",
     "\n",
@@ -57,24 +60,24 @@
     "\n",
     "Soon after introducing the algorithm, there it become clear that its quality significantly depends on quality of each component, i.e. local feature detector, descriptor, and geometry estimation. Pleora of new detectors and descriptors were proposed, with the most cited computer vision paper ever SIFT local feature\\cite{Lowe99}. \n",
     "\n",
-    "It is worth noting, that SIFT became popular only after Mikolajczyk benchmark paper \\cite{MikoDescEval2003, Mikolajczyk05}, showed it superiority to the rest of alternatives.\n",
+    "It is worth noti ng, that SIFT became popular only after Mikolajczyk benchmark paper \\cite{MikoDescEval2003, Mikolajczyk05}, showed it superiority to the rest of alternatives.\n",
     "\n",
     "Robust geometry estimation was also a hot topic: a lot of improvements over vanilla RANSAC were proposed: LO-RANSAC\\cite{LOransac2003}, DEGENSAC\\cite{Degensac2005}, MLESAC\\cite{MLESAC00} \n",
     "\n",
     "Success of wide baseline stereo with SIFT features led to aplication of its components to other computer vision tasks, which were reformulated through wide baseline stereo lens:\n",
     "\n",
-    "-   **Scalable image search**. Sivic and Zisserman in famous \"Video Google\" paper\\cite{VideoGoogle2003} proposed to treat local features as \"visual words\" and use ideas from text processing for searching in image collections.  Later even more WBS elements were re-introduced to image search, most notable - **spatial verification**\\cite{Philbin07}: simplified RANSAC procedure to verify if visual word matches were spatially consistent.\n",
+    "-   **Scalable image search**. Sivic and Zisserman in famous \"Video Google\" paper\\cite{VideoGoogle2003} proposed to treat local features as \"visual words\" and use ideas from text processing for searching in image collections.  Later even more WBS elements were re-introduced to image search, most notable -- **spatial verification**\\cite{Philbin07}: simplified RANSAC procedure to verify if visual word matches were spatially consistent.\n",
     "\n",
-    "![Bag of words image search. Image credit: Filip Radenovic http://cmp.felk.cvut.cz/~radenfil/publications/Radenovic-CMPcolloq-2015.11.12.pdf](00_intro_files/att_00004.png)\n",
+    "![](00_intro_files/att_00004.png \"Bag of words image search. Image credit: Filip Radenovic http://cmp.felk.cvut.cz/~radenfil/publications/Radenovic-CMPcolloq-2015.11.12.pdf\")\n",
     "\n",
     "- **Image classification** was performed by placing some classifier (SVM, random forest, etc) on top of some encoding of the SIFT-like descriptors, extracted sparsely\\cite{Fergus03, CsurkaBoK2004} or densely\\cite{Lazebnik06}. \n",
     "\n",
-    "![Bag of local features representation for classification from Fergus et.al, 2003](00_intro_files/att_00005.png)\n",
+    "![](00_intro_files/att_00005.png \"Bag of local features representation for classification from Fergus03\")\n",
     "\n",
     "\n",
     "- **Object detection** was formulated as relaxed wide baseline stereo problem\\cite{Chum2007Exemplar} or as classification of SIFT-like features inside a sliding window \\cite{HoG2005}\n",
     "\n",
-    "![Exemplar-representation of the classes using local features, Chum 2007](00_intro_files/att_00003.png)\n",
+    "![](00_intro_files/att_00003.png \"Exemplar-representation of the classes using local features, cite{Chum2007Exemplar}\")\n",
     "\n",
     "<!--- \n",
     "![HoG-based pedestrian detection algorithm](00_intro_files/att_00006.png)\n",
@@ -84,11 +87,11 @@
     "- **Semantic segmentation** was performed by classicication of local region descriptors, typically, SIFT and color features and postprocessing afterwards\\cite{Superparsing2010}. \n",
     "\n",
     "\n",
-    "Of course, wide baseline stereo was also used for its direct applications: \n",
+    "Of course,wide  baseline stereo was also used for its direct applications: \n",
     "\n",
     " - **3D reconstruction** was based on camera poses and 3D points, estimated with help of SIFT features \\cite{PhotoTourism2006, RomeInDay2009, COLMAP2016}\n",
     " \n",
-    " ![SfM pipeline from COLMAP paper](00_intro_files/att_00008.png)\n",
+    "![](00_intro_files/att_00008.png \"SfM pipeline from COLMAP\")\n",
     " \n",
     " - **SLAM(Simultaneous localization and mapping)** \\cite{Se02, PTAM2007, Mur15} were based on fast version of local feature detectors and descriptors.\n",
     " <!--- \n",
@@ -96,7 +99,6 @@
     "-->\n",
     " \n",
     " - **Panorama stiching** \\cite{Brown07} and, more generally, **feature-based image registration**\\cite{DualBootstrap2003} were initalized with a geometry obtained by WBS and then further optimized \n",
-    " \n",
     "\n",
     "\n",
     "## Deep Learning Invasion: retreal to the geometrical fortress\n",
@@ -105,7 +107,7 @@
     "In 2012 deep learning-based AlexNet\\cite{AlexNet2012} approach beat all the methods in image classification. Soon after, Razavian et.al\\cite{Astounding2014} have shown that convolutional neural networks pre-trained on the Imagenet outperform more complex traditional solutions in image and scene classification, object detection and image search.\n",
     "Deep learning solutions, be it pretrained or end-to-end learned networks quickly become the default solution for the most of computer vision problems.\n",
     "\n",
-    "![CNN representation beats complex traditional pipelines. From Razavian et.al.](00_intro_files/att_00010.png)\n",
+    "![](00_intro_files/att_00010.png \"CNN representation beats complex traditional pipelines. From Astounding2014\")\n",
     "\n",
     "\n",
     "However, there was still an area, where deep learned solutions failed, sometimes spectacularly: geometry-related tasks.  Wide baseline stereo\\cite{Melekhov2017relativePoseCnn}, visual localization\\cite{PoseNet2015}}, SLAM are still areas, where the classical wide baseline stereo dominates\\cite{sattler2019understanding, zhou2019learn}.\n",
@@ -115,7 +117,7 @@
     "\n",
     "Wide baseline stereo as a task is solved today typically by using learned components as a replacement of specific blocks in WBS algorithm\\cite{jin2020image} ,e.g. local descriptor like HardNet\\cite{HardNet2017}, detectors like KeyNet\\cite{KeyNet2019}, joint detector-descriptor\\cite{SuperPoint2017} matching and filtering like SuperGlue\\cite{sarlin2019superglue}, etc. \n",
     "\n",
-    "![SuperGlue: separate matching module for handcrafter and learned features](00_intro_files/att_00011.png)\n",
+    "![](00_intro_files/att_00011.png \"SuperGlue: separate matching module for handcrafter and learned features\")\n",
     "\n",
     "\n",
     "As an algorithm, wide baseline stereo is summarized into two main ideas\n",
@@ -124,10 +126,7 @@
     "2. Decision should be based on spatial consensus of local feature correspondences.\n",
     "\n",
     "\n",
-    "One of modern revisit of wide baseline stereo ideas is Capsule Networks\\cite{CapsNet2017}. While wide baseline stereo is far from the mainstream now, it continues to play an important role in computer vision.\n",
-    "\n",
-    "\n",
-    "\n"
+    "One of modern revisit of wide baseline stereo ideas is Capsule Networks\\cite{CapsNet2017}. While wide baseline stereo is far from the mainstream now, it continues to play an important role in computer vision."
    ]
   },
   {
@@ -231,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
