--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -10,7 +10,6 @@
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- image: images/att_00001.png\n",
     "- hide: false\n",
     "- search_exclude: true"
    ]
@@ -37,8 +36,7 @@
     "-->\n",
     "\n",
     "\n",
-    "![Commonly used wide baseline stereo pipeline](00_intro_files/att_00000.png \"Commonly used wide baseline stereo pipeline\")\n",
-    "*Commonly used wide baseline stereo pipeline*\n",
+    "![](00_intro_files/att_00000.png \"Commonly used wide baseline stereo pipeline\")\n",
     "\n",
     "\n",
     "The algorithm can be summarized as the following:\n",
