--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -7,6 +7,7 @@
     "# \"The Role of Wide Baseline Stereo in the Deep Learning World\"\n",
     "> \"Short history of wide baseline stereo in computer vision\"\n",
     "- toc: false\n",
+    "- image: images/doll_wbs_300.png\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
