why CNNs are bad for geometry and capsule nets

--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "Soon after introducing the algorithm, there it become clear that its quality significantly depends on quality of each component, i.e. local feature detector, descriptor, and geometry estimation. Pleora of new detectors and descriptors were proposed, with the most cited computer vision paper ever SIFT local feature\\cite{Lowe99}. \n",
     "\n",
-    "It is worth noti ng, that SIFT became popular only after Mikolajczyk benchmark paper \\cite{MikoDescEval2003, Mikolajczyk05}, showed it superiority to the rest of alternatives.\n",
+    "It is worth noting, that SIFT became popular only after Mikolajczyk benchmark paper \\cite{MikoDescEval2003, Mikolajczyk05}, showed it superiority to the rest of alternatives.\n",
     "\n",
     "Robust geometry estimation was also a hot topic: a lot of improvements over vanilla RANSAC were proposed: LO-RANSAC\\cite{LOransac2003}, DEGENSAC\\cite{Degensac2005}, MLESAC\\cite{MLESAC00} \n",
     "\n",
@@ -96,35 +96,62 @@
     "![ORBSLAM pipeline](00_intro_files/att_00009.png)\n",
     "-->\n",
     " \n",
-    " - **Panorama stiching** \\cite{Brown07} and, more generally, **feature-based image registration**\\cite{DualBootstrap2003} were initalized with a geometry obtained by WBS and then further optimized \n",
-    "\n",
-    "\n",
+    " - **Panorama stiching** \\cite{Brown07} and, more generally, **feature-based image registration**\\cite{DualBootstrap2003} were initalized with a geometry obtained by WBS and then further optimized "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Deep Learning Invasion: retreal to the geometrical fortress\n",
     "\n",
     "\n",
-    "In 2012 deep learning-based AlexNet\\cite{AlexNet2012} approach beat all the methods in image classification. Soon after, Razavian et.al\\cite{Astounding2014} have shown that convolutional neural networks pre-trained on the Imagenet outperform more complex traditional solutions in image and scene classification, object detection and image search.\n",
+    "In 2012 deep learning-based AlexNet\\cite{AlexNet2012} approach beat all the methods in image classification. Soon after, Razavian et.al\\cite{Astounding2014} have shown that convolutional neural networks (CNNs) pre-trained on the Imagenet outperform more complex traditional solutions in image and scene classification, object detection and image search.\n",
     "Deep learning solutions, be it pretrained or end-to-end learned networks quickly become the default solution for the most of computer vision problems.\n",
     "\n",
-    "![](00_intro_files/att_00010.png \"CNN representation beats complex traditional pipelines. From Astounding2014\")\n",
+    "![](00_intro_files/att_00010.png \"CNN representation beats complex traditional pipelines. Reds are CNN-based and greens are the handcrafted. From Astounding2014\")\n",
     "\n",
     "\n",
-    "However, there was still an area, where deep learned solutions failed, sometimes spectacularly: geometry-related tasks.  Wide baseline stereo\\cite{Melekhov2017relativePoseCnn}, visual localization\\cite{PoseNet2015}}, SLAM are still areas, where the classical wide baseline stereo dominates\\cite{sattler2019understanding, zhou2019learn}.\n",
+    "However, there was still an area, where deep learned solutions failed, sometimes spectacularly: geometry-related tasks. Wide baseline stereo\\cite{Melekhov2017relativePoseCnn}, visual localization\\cite{PoseNet2015}}, SLAM are still areas, where the classical wide baseline stereo dominates\\cite{sattler2019understanding, zhou2019learn}.\n",
     "\n",
+    "The full reasons why convolution pipelines are failing for geometrical tasks are yet to understand, but the current hypothesis are the following:\n",
     "\n",
+    "- CNN-based pose predictions predictions are roughly equivalent to retrieval of most similar image from the training set and outputing its pose.\\cite{sattler2019understanding} This phenomenum is also observed in related area: single-view 3D reconstruction\\cite{Tatarchenko2019}.\n",
+    "- Geometric and arithmetic operations are hard to represent via vanilla neural networks (i.e. matrix multiplication with non-linearity) and they may require specialized building blocks, resembling operations of algorithmic or geometric methods, e.g. spatial transformers\\cite{STN2015} and arithmetic units\\cite{NALU2018,NAU2020}. Even with special structure such networks require \"careful initialization, restricting parameter space, and regularizing for sparsity\"\\cite{NAU2020}.\n",
+    "- Vanilla CNNs are not covariant to even simple geometric transformation like translation \\cite{MakeCNNShiftInvariant2019}, scaling and especially rotation \\cite{GroupEqCNN2016}. Unlike them, WBS baseline is grounded on scale-space theory \\cite{lindeberg2013scale} and local patches are geometrically normalilzed before description. \n",
+    "- Predictions of the CNNs can be altered by change in a small localized area \\cite{AdvPatch2017} or even single pixel \\cite{OnePixelAttack2019}, while the wide baseline stereo methods require the consensus of different independent regions. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Today: assimilation and merging\n",
     "\n",
+    "### Wide baseline stereo as a task: formulate differentiably and learn modules\n",
     "Wide baseline stereo as a task is solved today typically by using learned components as a replacement of specific blocks in WBS algorithm\\cite{jin2020image} ,e.g. local descriptor like HardNet\\cite{HardNet2017}, detectors like KeyNet\\cite{KeyNet2019}, joint detector-descriptor\\cite{SuperPoint2017} matching and filtering like SuperGlue\\cite{sarlin2019superglue}, etc. \n",
+    "There are also attempts to formulate the whole downstream task pipeline like SLAM\\cite{gradslam2020} in a differentiable way, combining advantages of structured and learning-based approaches.  \n",
     "\n",
     "![](00_intro_files/att_00011.png \"SuperGlue: separate matching module for handcrafter and learned features\")\n",
     "\n",
+    "![](00_intro_files/gradslam.png \"gradSLAM: differentiable formulation of SLAM pipeline\")\n",
     "\n",
-    "As an algorithm, wide baseline stereo is summarized into two main ideas\n",
+    "\n",
+    "### Wide baseline stereo as a idea: consensus of local independent predictions\n",
+    "\n",
+    "On the other hand, as an algorithm, wide baseline stereo is summarized into two main ideas\n",
     "\n",
     "1. Image should be represented as set of local parts, robust to occlusion, and not influencing each other.\n",
     "2. Decision should be based on spatial consensus of local feature correspondences.\n",
     "\n",
     "\n",
-    "One of modern revisit of wide baseline stereo ideas is Capsule Networks\\cite{CapsNet2017}. While wide baseline stereo is far from the mainstream now, it continues to play an important role in computer vision."
+    "One of modern revisit of wide baseline stereo ideas is Capsule Networks\\cite{CapsNet2011,CapsNet2017}. Unlike CNNs, they encode not only intensity of feature responce, but also its location and require a geometric agreement between object parts for outputing a confident prediction.\n",
+    "\n",
+    "Similar ideas are now explored for ensuring adversarial robustness of CNNs\\cite{li2020extreme}.\n",
+    "\n",
+    "While wide baseline stereo is far from the mainstream now, it continues to play an important role in computer vision.\n",
+    "\n",
+    "![](00_intro_files/capsules.png \"Capsule networks: revisiting the WBS idea. Each feature response is accompanied with its pose. Poses should be in agreement, otherwise object would not be recognized. Image by Aurélien Géron https://www.oreilly.com/content/introducing-capsule-networks/\")"
    ]
   },
   {
@@ -197,6 +224,24 @@
     "\n",
     "[<a id=\"cit-zhou2019learn\" href=\"#call-zhou2019learn\">zhou2019learn</a>] Q. Zhou, T. Sattler, M. Pollefeys <em>et al.</em>, ``_To Learn or Not to Learn: Visual Localization from Essential Matrices_'', ICRA,  2020.\n",
     "\n",
+    "[<a id=\"cit-Tatarchenko2019\" href=\"#call-Tatarchenko2019\">Tatarchenko2019</a>] M. Tatarchenko, S.R. Richter, R. Ranftl <em>et al.</em>, ``_What Do Single-View 3D Reconstruction Networks Learn?_'', CVPR,  2019.\n",
+    "\n",
+    "[<a id=\"cit-STN2015\" href=\"#call-STN2015\">STN2015</a>] M. Jaderberg, K. Simonyan and A. Zisserman, ``_Spatial transformer networks_'', NeurIPS,  2015.\n",
+    "\n",
+    "[<a id=\"cit-NALU2018\" href=\"#call-NALU2018\">NALU2018</a>] A. Trask, F. Hill, S.E. Reed <em>et al.</em>, ``_Neural arithmetic logic units_'', NeurIPS,  2018.\n",
+    "\n",
+    "[<a id=\"cit-NAU2020\" href=\"#call-NAU2020\">NAU2020</a>] A. Madsen and A. Rosenberg, ``_Neural Arithmetic Units_'', ICLR,  2020.\n",
+    "\n",
+    "[<a id=\"cit-MakeCNNShiftInvariant2019\" href=\"#call-MakeCNNShiftInvariant2019\">MakeCNNShiftInvariant2019</a>] R. Zhang, ``_Making convolutional networks shift-invariant again_'', ICML,  2019.\n",
+    "\n",
+    "[<a id=\"cit-GroupEqCNN2016\" href=\"#call-GroupEqCNN2016\">GroupEqCNN2016</a>] T. Cohen and M. Welling, ``_Group equivariant convolutional networks_'', ICML,  2016.\n",
+    "\n",
+    "[<a id=\"cit-lindeberg2013scale\" href=\"#call-lindeberg2013scale\">lindeberg2013scale</a>] Lindeberg Tony, ``_Scale-space theory in computer vision_'', , vol. 256, number , pp. ,  2013.\n",
+    "\n",
+    "[<a id=\"cit-AdvPatch2017\" href=\"#call-AdvPatch2017\">AdvPatch2017</a>] T. Brown, D. Mane, A. Roy <em>et al.</em>, ``_Adversarial patch_'', NeurIPSW,  2017.\n",
+    "\n",
+    "[<a id=\"cit-OnePixelAttack2019\" href=\"#call-OnePixelAttack2019\">OnePixelAttack2019</a>] Su Jiawei, Vargas Danilo Vasconcellos and Sakurai Kouichi, ``_One pixel attack for fooling deep neural networks_'', IEEE Transactions on Evolutionary Computation, vol. 23, number 5, pp. 828--841,  2019.\n",
+    "\n",
     "[<a id=\"cit-jin2020image\" href=\"#call-jin2020image\">jin2020image</a>] Jin Yuhe, Mishkin Dmytro, Mishchuk Anastasiia <em>et al.</em>, ``_Image Matching across Wide Baselines: From Paper to Practice_'', arXiv preprint arXiv:2003.01587, vol. , number , pp. ,  2020.\n",
     "\n",
     "[<a id=\"cit-HardNet2017\" href=\"#call-HardNet2017\">HardNet2017</a>] A. Mishchuk, D. Mishkin, F. Radenovic <em>et al.</em>, ``_Working Hard to Know Your Neighbor's Margins: Local Descriptor Learning Loss_'', NeurIPS,  2017.\n",
@@ -207,7 +252,13 @@
     "\n",
     "[<a id=\"cit-sarlin2019superglue\" href=\"#call-sarlin2019superglue\">sarlin2019superglue</a>] P. Sarlin, D. DeTone, T. Malisiewicz <em>et al.</em>, ``_SuperGlue: Learning Feature Matching with Graph Neural Networks_'', CVPR,  2020.\n",
     "\n",
+    "[<a id=\"cit-CapsNet2011\" href=\"#call-CapsNet2011\">CapsNet2011</a>] G.E. Hinton, A. Krizhevsky and S.D. Wang, ``_Transforming auto-encoders_'', ICANN,  2011.\n",
+    "\n",
     "[<a id=\"cit-CapsNet2017\" href=\"#call-CapsNet2017\">CapsNet2017</a>] S. Sabour, N. Frosst and G.E. Hinton, ``_Dynamic routing between capsules_'', NeurIPS,  2017.\n",
+    "\n",
+    "[<a id=\"cit-gradslam2020\" href=\"#call-gradslam2020\">gradslam2020</a>] J. Krishna Murthy, G. Iyer and L. Paull, ``_gradSLAM: Dense SLAM meets Automatic Differentiation _'', ICRA,  2020 .\n",
+    "\n",
+    "[<a id=\"cit-li2020extreme\" href=\"#call-li2020extreme\">li2020extreme</a>] Li Jianguo, Sun Mingjie and Zhang Changshui, ``_Extreme Values are Accurate and Robust in Deep Networks_'', , vol. , number , pp. ,  2020.  [online](https://openreview.net/forum?id=H1gHb1rFwr)\n",
     "\n"
    ]
   }
