--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -28,25 +28,108 @@ pages="78--92",
 @incollection{AlexNet2012,
 title = {ImageNet Classification with Deep Convolutional Neural Networks},
 author = {Alex Krizhevsky and Sutskever, Ilya and Geoffrey E. Hinton},
-booktitle = {Advances in Neural Information Processing Systems 25},
-pages = {1097--1105},
+booktitle = {NeurIPS},
 year = {2012}
 }
+
+@inproceedings{gradslam2020,
+    author  = { Krishna Murthy, J. and Iyer, Ganesh and Paull, Liam },
+    title   = { gradSLAM: Dense SLAM meets Automatic Differentiation },
+    booktitle = { ICRA},
+    year    = { 2020 },
+}
+
+@article{li2020extreme,
+title={Extreme Values are Accurate and Robust in Deep Networks},
+author={Jianguo Li and Mingjie Sun and Changshui Zhang},
+year={2020},
+url={https://openreview.net/forum?id=H1gHb1rFwr}
+}
+
+@inproceedings{Tatarchenko2019,
+author = {Tatarchenko, Maxim and Richter, Stephan R. and Ranftl, Rene and Li, Zhuwen and Koltun, Vladlen and Brox, Thomas},
+title = {What Do Single-View 3D Reconstruction Networks Learn?},
+booktitle = {CVPR},
+year = {2019}
+}
+
+
+@inproceedings{NALU2018,
+  title={Neural arithmetic logic units},
+  author={Trask, Andrew and Hill, Felix and Reed, Scott E and Rae, Jack and Dyer, Chris and Blunsom, Phil},
+  booktitle={NeurIPS},
+  year={2018}
+}
+
+
+@inproceedings{NAU2020,
+title={Neural Arithmetic Units},
+author={Andreas Madsen and Alexander Rosenberg Johansen},
+booktitle={ICLR},
+year={2020}
+}
+
+
+@article{lindeberg2013scale,
+  title={Scale-space theory in computer vision},
+  author={Lindeberg, Tony},
+  volume={256},
+  year={2013},
+  publisher={Springer Science and Business Media}
+}
+
+@inproceedings{STN2015,
+  title={Spatial transformer networks},
+  author={Jaderberg, Max and Simonyan, Karen and Zisserman, Andrew},
+  booktitle={NeurIPS},
+  year={2015}
+}
+
+@inproceedings{MakeCNNShiftInvariant2019,
+  title={Making convolutional networks shift-invariant again},
+  author={Zhang, Richard},
+  booktitle={ICML},
+  year={2019}
+}
+
+@inproceedings{GroupEqCNN2016,
+  title={Group equivariant convolutional networks},
+  author={Cohen, Taco and Welling, Max},
+  booktitle={ICML},
+  year={2016}
+}
+
+@inproceedings{AdvPatch2017,
+  title={Adversarial patch},
+  author={Brown, TB and Mane, D and Roy, A and Abadi, M and Gilmer, J},
+  booktitle={NeurIPSW},
+  year={2017}
+}
+
+@article{OnePixelAttack2019,
+  title={One pixel attack for fooling deep neural networks},
+  author={Su, Jiawei and Vargas, Danilo Vasconcellos and Sakurai, Kouichi},
+  journal={IEEE Transactions on Evolutionary Computation},
+  volume={23},
+  number={5},
+  pages={828--841},
+  year={2019},
+  publisher={IEEE}
+}
+
 
 @inproceedings{Lowe99,
   author = {D.G. Lowe},
   title = {{Object Recognition from Local Scale-Invariant Features}},
   booktitle = {ICCV},
-  pages = "1150--1157",
-  year = 1999
+  year = {1999}
 }
 
 @inproceedings{MikoHesAff2002,
   author = {K. Mikolajczyk and C. Schmid},
   title = {{An Affine Invariant Interest Point Detector}},
   booktitle = {ECCV},
-  pages = "128--142",
-  year = 2002
+  year = {2002}
 }
 
 @inproceedings{MikoDescEval2003,
@@ -55,7 +138,7 @@ year = {2012}
   booktitle = {CVPR},
   pages = "257--263",
   month = "June",
-  year = 2003
+  year = {2003}
 }
 
 @article{Mikolajczyk05,
@@ -255,7 +338,6 @@ year={2014}}
   title={Understanding the limitations of cnn-based absolute camera pose regression},
   author={Sattler, Torsten and Zhou, Qunjie and Pollefeys, Marc and Leal-Taixe, Laura},
   booktitle={CVPR},
-  pages={3302--3312},
   year={2019}
 }
 
@@ -270,7 +352,7 @@ year={2014}}
   author = {A. Mishchuk and D. Mishkin and F. Radenovic and J. Matas},
   title = {{Working Hard to Know Your Neighbor's Margins: Local Descriptor Learning Loss}},
   booktitle = {NeurIPS},
-  year = 2017
+  year = {2017}
 }
 
 @inproceedings{sarlin2019superglue,
@@ -306,7 +388,14 @@ booktitle={CVPR},
   author = {J. Sivic and A. Zisserman},
   title = {{Video Google: A Text Retrieval Approach to Object Matching in Videos}},
   booktitle = {ICCV},
-  year = 2003
+  year = {2003}
+}
+
+@inproceedings{CapsNet2011,
+  title={Transforming auto-encoders},
+  author={Hinton, Geoffrey E and Krizhevsky, Alex and Wang, Sida D},
+  booktitle={ICANN},
+  year={2011},
 }
 
 
