Updated 1st wbs citation

--- a/_notebooks/2020-03-27-intro.ipynb
+++ b/_notebooks/2020-03-27-intro.ipynb
@@ -30,14 +30,15 @@
     "<!--- ![Wide baseline stereo model. \"Baseline\" is the distance between cameras. Image by Arne Nordmann (WikiMedia)](00_intro_files/Epipolar_geometry.svg) \n",
     "-->\n",
     "\n",
-    "One of the first succesful solutions for the WBS problem was proposed by Pritchett and Zisserman \\cite{Pritchett1998, Pritchett1998b} in 1998. The general pipeline remains mostly the same until now \\cite{WBSTorr99, CsurkaReview2018}. The currently adopted version of the wide baseline stereo algorithm is shown below. \n",
+    "One of the first succesful solutions for the WBS problem was proposed by Schmid and Mohr \\cite{Schmid1995} in 1995.\n",
+    "It was later extended by Beardsley, Torr and Zisserman\\cite{Beardsley96} by adding RANSAC robust geometry estimation and later refined by Pritchett and Zisserman \\cite{Pritchett1998, Pritchett1998b} in 1998. The general pipeline remains mostly the same until now \\cite{WBSTorr99, CsurkaReview2018}. The currently adopted version of the wide baseline stereo algorithm is shown below. \n",
     "\n",
     "<!--- \n",
     "![image.png](00_intro_files/att_00002.png)\n",
     "-->\n",
     "\n",
     "\n",
-    "![](00_intro_files/att_00000.png \"Commonly used wide baseline stereo pipeline\")\n",
+    "![](00_intro_files/matching-filtering.png \"Commonly used wide baseline stereo pipeline\")\n",
     "\n",
     "\n",
     "The algorithm can be summarized as the following:\n",
@@ -45,7 +46,9 @@
     "1. Compute interest points/regions in all images independently\n",
     "2. For each interest point/region compute a descriptor of their neigborhood (local patch).\n",
     "3. Establish tentative corresponces between interest points based on their descriptors.\n",
-    "4. Robustly estimate geometric relation between two images based on tentative correspondences with RANSAC.\n"
+    "4. Robustly estimate geometric relation between two images based on tentative correspondences with RANSAC.\n",
+    "\n",
+    "The reason of steps 1 and 2 done on the both images separately is that in general wide baseline stereo is not limited to pairs of images, but rather to a collections of them. If all the steps are done pairwise, then the computational complexity is $O(n^2)$. The more steps done seperately - the more efficient algorithm is."
    ]
   },
   {
@@ -252,13 +255,15 @@
     "\n",
     "[<a id=\"cit-sarlin2019superglue\" href=\"#call-sarlin2019superglue\">sarlin2019superglue</a>] P. Sarlin, D. DeTone, T. Malisiewicz <em>et al.</em>, ``_SuperGlue: Learning Feature Matching with Graph Neural Networks_'', CVPR,  2020.\n",
     "\n",
+    "[<a id=\"cit-gradslam2020\" href=\"#call-gradslam2020\">gradslam2020</a>] J. Krishna Murthy, G. Iyer and L. Paull, ``_gradSLAM: Dense SLAM meets Automatic Differentiation _'', ICRA,  2020 .\n",
+    "\n",
     "[<a id=\"cit-CapsNet2011\" href=\"#call-CapsNet2011\">CapsNet2011</a>] G.E. Hinton, A. Krizhevsky and S.D. Wang, ``_Transforming auto-encoders_'', ICANN,  2011.\n",
     "\n",
     "[<a id=\"cit-CapsNet2017\" href=\"#call-CapsNet2017\">CapsNet2017</a>] S. Sabour, N. Frosst and G.E. Hinton, ``_Dynamic routing between capsules_'', NeurIPS,  2017.\n",
     "\n",
-    "[<a id=\"cit-gradslam2020\" href=\"#call-gradslam2020\">gradslam2020</a>] J. Krishna Murthy, G. Iyer and L. Paull, ``_gradSLAM: Dense SLAM meets Automatic Differentiation _'', ICRA,  2020 .\n",
-    "\n",
     "[<a id=\"cit-li2020extreme\" href=\"#call-li2020extreme\">li2020extreme</a>] Li Jianguo, Sun Mingjie and Zhang Changshui, ``_Extreme Values are Accurate and Robust in Deep Networks_'', , vol. , number , pp. ,  2020.  [online](https://openreview.net/forum?id=H1gHb1rFwr)\n",
+    "\n",
+    "[<a id=\"cit-Schmid1995\" href=\"#call-Schmid1995\">Schmid1995</a>] Schmid Cordelia and Mohr Roger, ``_Matching by local invariants_'', , vol. , number , pp. ,  1995.  [online](https://hal.inria.fr/file/index/docid/74046/filename/RR-2644.pdf)\n",
     "\n"
    ]
   }
