--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -24,6 +24,25 @@ pages="78--92",
         eprint = {1807.10254}
  }
 
+@inproceedings{Beardsley96,
+author="Beardsley, Paul
+and Torr, Phil
+and Zisserman, Andrew",
+title="3D model acquisition from extended image sequences",
+booktitle="ECCV 96",
+year="1996",
+pages="683--695",
+}
+
+ 
+
+@article{Schmid1995,
+title={Matching by local invariants},
+author={Cordelia Schmid and Roger Mohr},
+year={1995},
+booktitle = {INRIA Research report},
+url={https://hal.inria.fr/file/index/docid/74046/filename/RR-2644.pdf}
+}
 
 @incollection{AlexNet2012,
 title = {ImageNet Classification with Deep Convolutional Neural Networks},
@@ -149,6 +168,12 @@ year={2020}
   number = "1/2",
   pages = "43--72",
   year = "2005"
+}
+
+@misc{Stereoscope,
+  title = {Stereoscope},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Stereoscope}},
+  note = {Accessed: 2020-05-11}
 }
 
 
