added WxBS definition

--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -31,10 +31,16 @@ and Zisserman, Andrew",
 title="3D model acquisition from extended image sequences",
 booktitle="ECCV 96",
 year="1996",
-pages="683--695",
+pages="683--695"
 }
 
  
+@inproceedings{Mishkin2015WXBS,
+	title={WxBS: Wide Baseline Stereo Generalizations},
+	author={Dmytro Mishkin and Jiri Matas and Michal Perdoch and Karel Lenc},
+	year={2015},
+	booktitle={BMVC}
+}
 
 @article{Schmid1995,
 title={Matching by local invariants},
@@ -55,7 +61,7 @@ year = {2012}
     author  = { Krishna Murthy, J. and Iyer, Ganesh and Paull, Liam },
     title   = { gradSLAM: Dense SLAM meets Automatic Differentiation },
     booktitle = { ICRA},
-    year    = { 2020 },
+    year    = { 2020 }
 }
 
 @article{li2020extreme,
