--- a/_notebooks/biblio.bib
+++ b/_notebooks/biblio.bib
@@ -8,7 +8,7 @@
   }
   
   
-  @InProceedings{Pritchett1998b,
+@InProceedings{Pritchett1998b,
 author = {Pritchett, P. and Zisserman, A.},
  title={"Matching and Reconstruction from Widely Separated Views"},
 booktitle="3D Structure from Multiple Images of Large-Scale Environments",
@@ -16,22 +16,19 @@ year="1998",
 pages="78--92",
 }
 
-@ARTICLE{CsurkaReview2018,
+@article{CsurkaReview2018,
        author = {{Csurka}, Gabriela and {Dance}, Christopher R. and {Humenberger}, Martin},
-        title = "{From handcrafted to deep local features}",
+        title = {From handcrafted to deep local features},
       journal = {arXiv e-prints},
          year = {2018},
         eprint = {1807.10254}
- }
+}
 
 @inproceedings{Beardsley96,
-author="Beardsley, Paul
-and Torr, Phil
-and Zisserman, Andrew",
-title="3D model acquisition from extended image sequences",
-booktitle="ECCV 96",
-year="1996",
-pages="683--695"
+author={Paul Beardsley and Phil Torr and Andrew Zisserman},
+title={3D model acquisition from extended image sequences},
+booktitle={ECCV},
+year={1996}
 }
 
  
