enabled math mode

--- a/_notebooks/2020-07-09-wxbs.ipynb
+++ b/_notebooks/2020-07-09-wxbs.ipynb
@@ -21,10 +21,10 @@
    "source": [
     "### Definition of WxBS\n",
     "\n",
-    "Let us denote $X_i$ a set of objects in 3D space (or 4D for space-time). \n",
+    "Let us denote $ X_{i} $  a set of objects in 3D space (or 4D for space-time). \n",
     "\n",
     "Let $O_{j}^{i}$ the observation of object $X_i$. \n",
-    "Then the set $C_{i}$ of observations  $O_{j}^{i}$ of the same object $X_i$ is called a **true correspondence set**. The set can be empty if no observation of the specific object is made. The element of the $C_i$, $c_{i}^{jk}$ is called a **true correspondence** between observation $O_{j}$ and $O_{k}$ if and only if $O_{j}$ and $O_{k}$ are the observation of the same object $X_i$.\n",
+    "Then the set $C_{i}$ of observations $O_{j}^{i}$ of the same object $X_i$ is called a **true correspondence set**. The set can be empty if no observation of the specific object is made. The element of the $C_i$, $c_{i}^{jk}$ is called a **true correspondence** between observation $ O_{j} $ and $O_{k}$ if and only if $O_{j}$ and $O_{k}$ are the observation of the same object $X_i$.\n",
     "\n",
     "We would also call the correspondence as $c_{jk}$ as \"consistent, but incorrect\" if $O_{j}$ and $O_{k}$ are the observation of the same object $X_i$, but are wrongly attributed to the other object $X_z$.\n",
     "\n",
